solucionado fallo si el pais no tiene capital